syntax = "proto3";

package pb;

import "rpc_create_member.proto";
import "rpc_login_member.proto";

option go_package = "github.com/YuanData/allegro-trade/pb";

service AllegroTrade {
    rpc CreateMember (CreateMemberRequest) returns (CreateMemberResponse) {}
    rpc LoginMember (LoginMemberRequest) returns (LoginMemberResponse) {}
}
